--- a/insta/templates/base.html
+++ b/insta/templates/base.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
-  <link rel="icon" type="image/ico" href="https://instagram-brand.com/wp-content/uploads/2016/11/Instagram_AppIcon_Aug2017.png?w=300" />
+  <link rel="icon" type="image/ico"
+    href="https://instagram-brand.com/wp-content/uploads/2016/11/Instagram_AppIcon_Aug2017.png?w=300" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Bootstrap -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
@@ -19,42 +20,43 @@
   <link href="https://fonts.googleapis.com/css?family=Playball&display=swap" rel="stylesheet">
 </head>
 <style>
-    ul {
-        display: inline-block;
+  ul {
+    display: inline-block;
 
-    }
+  }
 
-    li {
-        text-align: center;
-        display: inline-block;
-        margin-right: 10px;
-        padding: 10px;
-    }
+  li {
+    text-align: center;
+    display: inline-block;
+    margin-right: 10px;
+    padding: 10px;
+  }
 
-    ul>li>a {
-        text-decoration: none;
-    }
-    body{
-      width: 100%;
-      padding: 0;
-    }
+  ul>li>a {
+    text-decoration: none;
+  }
+
+  body {
+    width: 100%;
+    padding: 0;
+  }
 </style>
 
 
 <body>
-    <div id="mdb-preloader" class="flex-center">
-        <div id="preloader-markup">
-        </div>
-      </div>
+  <div id="mdb-preloader" class="flex-center">
+    <div id="preloader-markup">
+    </div>
+  </div>
 
 
-{% include 'navbar.html' %}
+  {% include 'navbar.html' %}
 
 
 
 
 
- {% block content %} {% endblock  %}
+  {% block content %} {% endblock  %}
 
 
 
