--- a/insta/templates/registration/login.html
+++ b/insta/templates/registration/login.html
@@ -34,9 +34,10 @@
 
             <div class="card card-cascade  wider animated slideInDown">
                 <div class="card-body card-body-cascade ">
-                  
-                    <h5 class="card-header info-color white-text text-center py-4" style="background: rgb(131,58,180);
-                    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,88,31,1) 65%, rgba(253,29,29,1) 74%, rgba(253,52,35,1) 78%, rgba(253,62,30,1) 85%, rgba(252,176,69,1) 100%);" >
+
+                    <h5 class="card-header info-color white-text text-center py-4"
+                        style="background: rgb(131,58,180);
+                    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,88,31,1) 65%, rgba(253,29,29,1) 74%, rgba(253,52,35,1) 78%, rgba(253,62,30,1) 85%, rgba(252,176,69,1) 100%);">
                         <strong>Sign In</strong>
                     </h5>
                     <form action="/accounts/login/" method="POST" style="color:#757575;">
