--- a/insta/templates/search.html
+++ b/insta/templates/search.html
@@ -1,46 +1,45 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 {% block content %}
 <div class="container">
-<div class="row">
-{% if users %} 
-<h3>Found {{ users|length }} of searched term {{message}}</h3>
-{% else %} 
-<h3>Found 0 users of searched term {{message}}</h3>
-{% endif %}
+  <div class="row">
+    {% if users %}
+    <h3>Found {{ users|length }} of searched term {{message}}</h3>
+    {% else %}
+    <h3>Found 0 users of searched term {{message}}</h3>
+    {% endif %}
+    <br>
+    <br>
 
-<div class="row">
-    {% for person in users %}
-        <div class="col-md-4">
-            <div class="card testimonial-card text-center">
+    <div class="row">
+      {% for person in users %}
+      <div class="card testimonial-card text-center">
 
-                <!-- Background color -->
-                <div class="card-up indigo lighten-1"></div>
-              
-                <!-- Avatar -->
-                <div class="avatar mx-auto white">
-                  <img src="{{person.profile_photo.url}}"  alt=" avatar" height="200" width="200">
-                </div>
+        <!-- Background color -->
+        <div class="card-up indigo lighten-1"></div>
 
-                <img src="{{person.image.url}}" alt="">
-              
-                <!-- Content -->
-                <div class="card-body">
-                  <!-- Name -->
-                  <a href="{% url 'profile' username=person.user %}"><h4 class="card-title text-center pink-text"> {{person.user.username}}</h4><a>
-                  <hr>
-                  <!-- Quotation -->
-                 
-                </div>
-              
-              </div>
-              <!-- Card -->
+        <!-- Avatar -->
+        <div class="avatar mx-auto white">
+          <img src="{{person.profile_photo.url}}" alt=" avatar" height="200" width="200">
         </div>
-        {% endfor %}
-
-</div>
-</div>
 
 
+        <!-- Content -->
+        <div class="card-text">
+          <!-- Name -->
+          <a href="{% url 'profile' username=person.user %}">
+            <h4 class="card-title text-center pink-text"> {{person.user.username}}</h4><a>
+              <hr>
+              <!-- Quotation -->
+
+        </div>
+
+      </div>
+      <!-- Card -->
+
+      {% endfor %}
+
+    </div>
+  </div>
 
 
 
@@ -50,4 +49,6 @@
 
 
 
-{% endblock %}
+
+
+  {% endblock %}
