Changed navbar animations

--- a/insta/templates/navbar.html
+++ b/insta/templates/navbar.html
@@ -16,7 +16,7 @@
   }
 </style>
 <header style="margin:0%;">
-  <nav style="background-color:white;" class="animated fadeInRight">
+  <nav style="background-color:white;" class="animated fadeInLeft">
     <div class="navbar mx-5">
       <div class="navbar-brand">
         <a href="{% url 'home' %}"> <img
